--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -14,10 +14,6 @@
   margin-top: 2vh;
 }
 
-.form_item h3 {
-  margin: 0;
-}
-
 .formBox {
   width: 90vw;
   display: flex;
@@ -44,7 +40,7 @@ input {
   margin: 0 !important;
   border-radius: 15px;
   border: none;
-  background:rgba(255, 255, 255, 0.25) !important ;
+  background: rgba(255, 255, 255, 0.25) !important ;
   color: white;
   -webkit-text-fill-color: black !important;
   font-weight: 600 !important;
@@ -52,11 +48,12 @@ input {
 
 h4 {
   margin: 0;
+  color: white;
   padding-bottom: 0.25vh;
+
 }
 
-
-.submitButton{
+.submitButton {
   margin-top: 5vh !important;
   font-size: 2rem;
   font-weight: 900;
