--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,6 +27,7 @@ h1 {
   -o-background-size: cover;
   background-size: cover;
   width: 100vw;
+  height: 98vh;
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   flex-direction: column;
