--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -23,6 +23,17 @@
       <div class="logo">
         <img class="logo_img2" src="../static/images/logo.png    " alt="settler logo">
       </div>
+      <div id="google_translate_element"></div>
+
+        <script type="text/javascript">
+            function googleTranslateElementInit() {
+                new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
+            }
+        </script>
+
+        <script type="text/javascript"
+            src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
       <div class="topnav">
         <a href="#home" class="active">Menu</a>
         <div id="myLinks">
